# galileo-osnma

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  pycodestyle.yml  rust.yml  test-vectors.yml
galileo-osnma/: Cargo.toml
galileo-osnma/src/: dsm.rs  gst.rs  lib.rs  mack.rs  navmessage.rs  osnma.rs  storage.rs  subframe.rs  svn.rs  types.rs
galileo-osnma/src/galmon/: mod.rs
galileo-osnma/src/galmon/transport/test/: data.rs
galmon-osnma/: Cargo.toml
galmon-osnma/src/: main.rs
osnma-longan-nano/: Cargo.toml  README.md  build.rs  openocd.cfg  openocd.gdb  pubkey.pem
osnma-longan-nano-client/: Cargo.toml  README.md
osnma-longan-nano-client/src/: main.rs
osnma-longan-nano/.cargo/: config
osnma-longan-nano/src/: main.rs
osnma-test-vectors-to-galmon/: Cargo.toml  run_test_vectors.sh
osnma-test-vectors-to-galmon/src/: main.rs
src/: bitfields.rs  dsm.rs  gst.rs  lib.rs  mack.rs  maclt.rs  main.rs  merkle_tree.rs  navmessage.rs  osnma.rs  storage.rs  subframe.rs  svn.rs  tesla.rs  types.rs  validation.rs
src/galmon/: mod.rs
src/galmon/transport/test/: data.rs
utils/: extract_merkle_tree_key.py  extract_merkle_tree_root.py  extract_public_key.py  run_test_vectors.sh  sec1_to_pem.py
