[package]
name = "galileo-osnma"
version = "0.10.1"
edition = "2024"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Galileo OSNMA (Open Service Navigation Message Authentication)"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/galileo-osnma/"
repository = "https://github.com/daniestevez/galileo-osnma/"
keywords = ["galileo", "gnss", "osnma", "authentication", "cryptography"]
categories = ["aerospace::space-protocols", "authentication", "embedded", "no-std"]
exclude = ["/.github"]
rust-version = "1.85.0"

[package.metadata]

[features]
default = ["p521"]
# Galmon protobuf transport format support
galmon = ["bytes", "prost", "prost-build", "std"]
std = []

[dependencies]
aes = "0.8"
bitvec = { version = "1", default-features = false }
bytes = { version = "1.1", optional = true }
cmac = "0.7"
crypto-common = "0.1"
ecdsa = "0.16"
generic-array = "1.0"
hmac = "0.12"
log = "0.4"
# These two would bring std with default-features
p256 = { version = "0.13", features = ["ecdsa"], default-features = false }
p521 = { version = "0.13", features = ["ecdsa"], default-features = false, optional = true }
prost = { version = "0.14", optional = true }
# These two bring std with default-features
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
signature = "2.2"
typenum = "1.15"

[build-dependencies]
prost-build = { version = "0.14", optional = true }

[dev-dependencies]
hex-literal = "1"

[package.metadata.docs.rs]
features = ["galmon"]
