[workspace]
resolver = "3"
members = ["galileo-osnma", "osnma-longan-nano"]
default-members = ["galileo-osnma"]

[workspace.dependencies]
aes = "0.8"
anyhow = "1"
bitvec = { version = "1", default-features = false }
bytes = "1.1"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
cmac = "0.7"
crypto-common = "0.1"
ecdsa = "0.16"
env_logger = "0.11"
generic-array = "1.0"
hex = { version = "0.4", default-features = false }
hex-literal = "1"
hmac = "0.12"
log = "0.4"
longan-nano = "0.3"
nb = "1"
# These two would bring std with default-features
p256 = { version = "0.13", features = ["ecdsa"], default-features = false }
p521 = { version = "0.13", features = ["ecdsa"], default-features = false }
panic-halt = "1"
prost = "0.14"
prost-build = "0.14"
riscv-rt = "0.16"
# These two bring std with default-features
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
serialport = "4"
signature = "2.2"
spki = { version = "0.7", features = ["pem"] }
typenum = "1.15"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.embedded]
inherits = "release"
# For some reason, the osnma-longan-nano firmware hangs when running
# feed_osnma() if built with codegen-units = 1
codegen-units = 16
# Include debug info in the ELF to enhance gdb usage over JTAG
debug = true
opt-level = "z"  # Optimize for size.
