[package]
name = "galmon-osnma"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Galileo OSNMA processing of Galmon transport protocol"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/galileo-osnma/"
repository = "https://github.com/daniestevez/galileo-osnma/"
keywords = ["galileo", "gnss", "osnma", "authentication", "cryptography"]
categories = ["aerospace::space-protocols", "authentication", "embedded", "no-std"]
default-run = "galmon-osnma"

publish = false

[dependencies]
ecdsa = { version = "0.14", features = ["pkcs8"] }
env_logger = "0.9"
galileo-osnma = { path = "..", features = ["galmon"] }
log = "0.4"
p256 = { version = "0.11", features = ["ecdsa"] }
spki = { version = "0.6", features = ["pem"] }
