[package]
name = "galmon-osnma"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Galileo OSNMA processing of Galmon transport protocol"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/galileo-osnma/"
repository = "https://github.com/daniestevez/galileo-osnma/"
keywords = ["galileo", "gnss", "osnma", "authentication", "cryptography"]
categories = ["aerospace::space-protocols", "authentication", "embedded", "no-std"]
default-run = "galmon-osnma"

publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
ecdsa = { version = "0.16", features = ["pkcs8"] }
env_logger = "0.10"
galileo-osnma = { path = "..", features = ["galmon"] }
hex = "0.4"
log = "0.4"
p256 = { version = "0.13", features = ["ecdsa"] }
spki = { version = "0.7", features = ["pem"] }
