[package]
name = "osnma-longan-nano-client"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Galileo OSNMA demo in a Longan Nano board (serial port client)"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/galileo-osnma/"
repository = "https://github.com/daniestevez/galileo-osnma/"
keywords = ["galileo", "gnss", "osnma", "authentication", "cryptography"]
categories = ["aerospace::space-protocols", "authentication", "embedded", "no-std"]

publish = false

[dependencies]
hex = "0.4"
galileo-osnma = { path = "..", features = ["galmon"] }
serialport = "4.0"

