[package]
name = "osnma-longan-nano"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Galileo OSNMA demo in a Longan Nano board"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/galileo-osnma/"
repository = "https://github.com/daniestevez/galileo-osnma/"
keywords = ["galileo", "gnss", "osnma", "authentication", "cryptography"]
categories = ["aerospace::space-protocols", "authentication", "embedded", "no-std"]

publish = false

[dependencies]
hex = { version = "0.4", default-features = false }
galileo-osnma = { path = "..", default-features = false }
longan-nano = "0.3"
nb = "1.0"
p256 = { version = "0.13", features = ["ecdsa"], default-features = false }
panic-halt = "0.2"
riscv-rt = "0.11"

[build-dependencies]
ecdsa = { version = "0.16", features = ["pkcs8"] }
p256 = { version = "0.13", features = ["ecdsa"] }
spki = { version = "0.7", features = ["pem"] }

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
