[package]
name = "osnma-longan-nano"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Galileo OSNMA demo in a Longan Nano board"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/galileo-osnma/"
repository = "https://github.com/daniestevez/galileo-osnma/"
keywords = ["galileo", "gnss", "osnma", "authentication", "cryptography"]
categories = ["aerospace::space-protocols", "authentication", "embedded", "no-std"]

[dependencies]
hex = { workspace = true }
galileo-osnma = { path = "../galileo-osnma", default-features = false }
longan-nano = { workspace = true }
nb = { workspace = true }
p256 = { workspace = true }
panic-halt = { workspace = true }
riscv-rt = { workspace = true }

[build-dependencies]
hex = { workspace = true, default-features = true }
ecdsa = { workspace = true, features = ["pkcs8"] }
p256 = { workspace = true, default-features = true }
spki = { workspace = true }
